<resources>
    <string name="app_name">ПокеГороскоп</string>
    <string name="znak1">Овен – прирожденный лидер, и с этим ничего не поделаешь. Уже при первом знакомстве с Овном вы буквально кожей можете ощутить главную особенность этого знака Зодиака – неизбывную уверенность в себе и в своей правоте.</string>
    <string name="znak2">Козерог – прирожденный лидер, и с этим ничего не поделаешь. Уже при первом знакомстве с Овном вы буквально кожей можете ощутить главную особенность этого знака Зодиака – неизбывную уверенность в себе и в своей правоте.</string>
    <string name="znak3">Водолей – прирожденный лидер, и с этим ничего не поделаешь. Уже при первом знакомстве с Овном вы буквально кожей можете ощутить главную особенность этого знака Зодиака – неизбывную уверенность в себе и в своей правоте.</string>
    <string name="znak4">Рак – прирожденный лидер, и с этим ничего не поделаешь. Уже при первом знакомстве с Овном вы буквально кожей можете ощутить главную особенность этого знака Зодиака – неизбывную уверенность в себе и в своей правоте.</string>
    <string name="znak5">Лев – прирожденный лидер, и с этим ничего не поделаешь. Уже при первом знакомстве с Овном вы буквально кожей можете ощутить главную особенность этого знака Зодиака – неизбывную уверенность в себе и в своей правоте.</string>
    <string name="znak6">Весы – прирожденный лидер, и с этим ничего не поделаешь. Уже при первом знакомстве с Овном вы буквально кожей можете ощутить главную особенность этого знака Зодиака – неизбывную уверенность в себе и в своей правоте.</string>
    <string name="znak7">Дева – прирожденный лидер, и с этим ничего не поделаешь. Уже при первом знакомстве с Овном вы буквально кожей можете ощутить главную особенность этого знака Зодиака – неизбывную уверенность в себе и в своей правоте.</string>
    <string name="znak8">Рыбы – прирожденный лидер, и с этим ничего не поделаешь. Уже при первом знакомстве с Овном вы буквально кожей можете ощутить главную особенность этого знака Зодиака – неизбывную уверенность в себе и в своей правоте.</string>
    <string name="znak9">Скорпион – прирожденный лидер, и с этим ничего не поделаешь. Уже при первом знакомстве с Овном вы буквально кожей можете ощутить главную особенность этого знака Зодиака – неизбывную уверенность в себе и в своей правоте.</string>
    <string name="znak10">10 – прирожденный лидер, и с этим ничего не поделаешь. Уже при первом знакомстве с Овном вы буквально кожей можете ощутить главную особенность этого знака Зодиака – неизбывную уверенность в себе и в своей правоте.</string>
    <string name="znak11">11 – прирожденный лидер, и с этим ничего не поделаешь. Уже при первом знакомстве с Овном вы буквально кожей можете ощутить главную особенность этого знака Зодиака – неизбывную уверенность в себе и в своей правоте.</string>
    <string name="znak12">12 – прирожденный лидер, и с этим ничего не поделаешь. Уже при первом знакомстве с Овном вы буквально кожей можете ощутить главную особенность этого знака Зодиака – неизбывную уверенность в себе и в своей правоте.</string>
    <string name="action1">Тип1</string>
    <string name="action2">Тип2</string>
    <string name="action3">Тип3</string>
    <string name="connect_fail">Ошибка</string>
    <string name="repeat_connect">Повторить</string>
    <string name="loading">Загрузка…</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="action_settings">Settings</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
