<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <android.support.design.widget.TabLayout
        android:id="@+id/sliding_tabs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:tabMode="fixed"
        />

    <android.support.v4.view.ViewPager
        android:id="@+id/viewpager"
        android:layout_width="match_parent"
        android:layout_height="0px"
        android:layout_weight="1"
        android:background="@android:color/white"
        />

    <ImageView
        android:id="@+id/iv_imageZodiac"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        app:srcCompat="@drawable/aquarius" />

    <TextView
        android:id="@+id/tv_NameOfZodiac1"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:hint="Овен"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/tv_NameOfZodiac1.1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/znak1"
        android:textAlignment="center" />

    <ImageView
        android:id="@+id/iv_imageZodiac2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        app:srcCompat="@drawable/aquarius" />

    <TextView
        android:id="@+id/tv_NameOfZodiac2"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:hint="Козерог"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/tv_NameOfZodiac2.1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/znak2"
        android:textAlignment="center" />

    <ImageView
        android:id="@+id/iv_imageZodiac3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        app:srcCompat="@drawable/aquarius" />

    <TextView
        android:id="@+id/tv_NameOfZodiac3"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:hint="Водолей"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/tv_NameOfZodiac3.1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/znak3"
        android:textAlignment="center" />

    <ImageView
        android:id="@+id/iv_imageZodiac4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        app:srcCompat="@drawable/aquarius" />

    <TextView
        android:id="@+id/tv_NameOfZodiac4"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:hint="Водолей"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/tv_NameOfZodiac4.1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/znak4"
        android:textAlignment="center" />

    <ImageView
        android:id="@+id/iv_imageZodiac5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        app:srcCompat="@drawable/aquarius" />

    <TextView
        android:id="@+id/tv_NameOfZodiac5"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:hint="Водолей"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/tv_NameOfZodiac5.1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/znak5"
        android:textAlignment="center" />

    <ImageView
        android:id="@+id/iv_imageZodiac6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        app:srcCompat="@drawable/aquarius" />

    <TextView
        android:id="@+id/tv_NameOfZodiac6"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:hint="Водолей"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/tv_NameOfZodiac6.1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/znak6"
        android:textAlignment="center" />

    <ImageView
        android:id="@+id/iv_imageZodiac7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        app:srcCompat="@drawable/aquarius" />

    <TextView
        android:id="@+id/tv_NameOfZodiac7"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:hint="Водолей"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/tv_NameOfZodiac7.1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/znak7"
        android:textAlignment="center" />

    <ImageView
        android:id="@+id/iv_imageZodiac8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        app:srcCompat="@drawable/aquarius" />

    <TextView
        android:id="@+id/tv_NameOfZodiac8"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:hint="Водолей"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/tv_NameOfZodiac8.1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/znak8"
        android:textAlignment="center" />

    <ImageView
        android:id="@+id/iv_imageZodiac9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        app:srcCompat="@drawable/aquarius" />

    <TextView
        android:id="@+id/tv_NameOfZodiac9"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:hint="Водолей"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/tv_NameOfZodiac9.1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/znak9"
        android:textAlignment="center" />

    <ImageView
        android:id="@+id/iv_imageZodiac10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        app:srcCompat="@drawable/aquarius" />

    <TextView
        android:id="@+id/tv_NameOfZodiac10"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:hint="Водолей"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/tv_NameOfZodiac10.1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/znak10"
        android:textAlignment="center" />

    <ImageView
        android:id="@+id/iv_imageZodiac11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        app:srcCompat="@drawable/aquarius" />

    <TextView
        android:id="@+id/tv_NameOfZodiac11"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:hint="Водолей"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/tv_NameOfZodiac11.1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/znak11"
        android:textAlignment="center" />

    <ImageView
        android:id="@+id/iv_imageZodiac12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        app:srcCompat="@drawable/aquarius" />

    <TextView
        android:id="@+id/tv_NameOfZodiac12"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:hint="Водолей"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/tv_NameOfZodiac12.1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/znak12"
        android:textAlignment="center" />

</LinearLayout>

